--- a/index.html
+++ b/index.html
@@ -11,40 +11,20 @@
   <body>
      <div class="container ">
          <div class="resultComment column is-half is-offset-one-quarter">
-
-             <!-- Sorry That's not correct. The answer is <span name="correctNumber"> </span> -->
-             <!-- Yay! Way to go! -->
          </div>
-         <!-- <div class="is-vcentered"> -->
          <div class="field column is-half is-offset-one-quarter">
              <div class="control has-icons-left has-icons-right">
-                 <input class="input is-danger is-success" type="number" placeholder="My guess" name="userInput">
+                 <input class="input  is-success" type="number" placeholder="My guess" name="userInput">
                  <span class="icon is-small is-left">
                      <i class="fas fa-hashtag"></i>
                  </span>
                  <span class="icon icon-change is-small is-right">
-                     <!-- <i class="fas fa-check"></i>
-                    // <i class="fas fa-exclamation-triangle"></i> -->
                  </span>
              </div>
-             <!-- <p class="help is-success">This username is available</p> -->
          </div>
          <p class="help error-m is-danger column is-half is-offset-one-quarter"></p>
-
        <p><a class="button is-primary is-rounded is-large column is-one-fifth is-offset-two-fifths" onClick="myGuess()">Enter</a></p>
-
-
      </div>
-    <!-- <div class="columns">
-        <div class="column is-one-third">is-one-third</div>
-        <div class="column">Auto</div>
-        <div class="column">Auto</div>
-    </div> -->
-
-
-    <!-- </div> -->
-
-
     <script src="scripts.js" charset="utf-8"></script>
   </body>
 </html>
