--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Can you Guess the number?</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css">
+    <link rel="icon" type="image/png" href="./bitmoji-avatar-pink.png" sizes="32x32">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
   <body>
