Simplified code. added heading

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 </head>
   <body>
      <div class="container ">
+         <div class="column is-half is-offset-one-quarter">
+             <h1>
+                 <b>I'm thinking of a number between 1 and 10... Can you guess the number?</b>
+            </h1>
+         </div>
          <div class="resultComment column is-half is-offset-one-quarter">
          </div>
          <div class="field column is-half is-offset-one-quarter">
